avoid scroll bar overflow

--- a/src/bar.css
+++ b/src/bar.css
@@ -70,10 +70,10 @@ div::-webkit-scrollbar-thumb:hover {
 
 div::-webkit-scrollbar-track-piece:end {
   background: transparent;
-  margin-bottom: 10px; 
+  margin-bottom: 22px; 
 }
 
 div::-webkit-scrollbar-track-piece:start {
   background: transparent;
-  margin-top: 10px;
+  margin-top: 22px;
 }
